--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ reqwest = "0.12.9"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
